# MoaActuatorBasedOnDoSA

./: .gitignore  Actuator.ipynb  Actuator_Maxwell.ipynb  LICENSE  README.md  pyproject.toml  run_gui.bat  setup_venv.bat  test_moa_actuator.ipynb  tutorial_dosa_maxwell_mvp.ipynb  tutorial_moa_actuator.ipynb
DoSA-2D/Code/31_DoSA-Maxwell-Automation/: README.md  pyproject.toml
DoSA-2D/Code/31_DoSA-Maxwell-Automation/config/: unified_plan.json
DoSA-2D/Code/31_DoSA-Maxwell-Automation/docs/: UNIFIED_PLAN.md
DoSA-2D/Code/31_DoSA-Maxwell-Automation/output/solenoid_build/: maxwell_commands.json  run_result.json
DoSA-2D/Code/31_DoSA-Maxwell-Automation/output/solenoid_le01/: run_result.json
DoSA-2D/Code/31_DoSA-Maxwell-Automation/output/vcm_build/: maxwell_commands.json  run_result.json
DoSA-2D/Code/31_DoSA-Maxwell-Automation/output/vcm_ws01/: run_result.json
DoSA-2D/Code/31_DoSA-Maxwell-Automation/output/verify_solenoid/: maxwell_commands.json
DoSA-2D/Code/31_DoSA-Maxwell-Automation/output/verify_vcm/: maxwell_commands.json
DoSA-2D/Code/31_DoSA-Maxwell-Automation/outputs/VCM/: design_canonical.json
DoSA-2D/Code/31_DoSA-Maxwell-Automation/src/dosa_maxwell/: apply.py  mapping.py  maxwell_builder.py  maxwell_runner.py  parser.py  profiles.py
DoSA-2D/Code/31_DoSA-Maxwell-Automation/tests/: check_nb_outputs.py  enable_session_reuse.py  fix_solenoid_live.py  fix_vcm3d_cell.py  insert_3d_cells.py  make_vcm2d_live.py  optimize_notebook_speed.py  patch_aedt_path_print.py  rewrite_notebook.py  sync_live_cells.py  test_maxwell_launch.py  verify_e2e.py
(+145 files in other folders)
